kubernetes/environments/test/apps/idoit/ingress.yaml
---
# TLS Zertifikat fuer i-doit (TEST)
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: idoit-tls
  namespace: traefik
spec:
  secretName: idoit-tls
  issuerRef:
    name: letsencrypt-prod
    kind: ClusterIssuer
  dnsNames:
    - idoit-test.eneg.de
---
# IngressRoute fuer i-doit (TEST)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: idoit
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`idoit-test.eneg.de`)
      kind: Rule
      services:
        - name: idoit
          namespace: idoit
          port: 80
  tls:
    secretName: idoit-tls
